kim kim one single dim

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
 
 
     </div>
+    <div>
+        <h3>kim kim khai everyday one dim</h3>
+        <img src="images/mahdi.jpg" alt="" width="500px" height="1000px">
+    </div>
     
 </body>
 </html>
